<resources>
    <string name="app_name">Gads Leaderboard</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="learning_leader_badge">Learning leader badge</string>
    <string name="error_loading_try_again">Error loading, try again</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="launch_gads_image">Launch Gads image</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="email_address">Email Address</string>
    <string name="project_submission">Project Submission</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="close_icon">close icon</string>
    <string name="yes">Yes</string>
    <string name="back_button">Back button</string>
    <string name="submission_result">Submission Result</string>
</resources>