<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:weightSum="2"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputFirstName"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/shape_edit_text"
            android:hint="@string/first_name"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputLastName"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/shape_edit_text"
            android:hint="@string/last_name"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textStyle="bold" />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEmail"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/email_address"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputLink"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/project_on_github_link"
        android:inputType="text"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEmail" />


    <LinearLayout
        android:id="@+id/buttonSubmitForm"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/shape_submit_form"
        android:baselineAligned="true"
        android:gravity="center"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLink"
        app:layout_constraintStart_toStartOf="@+id/textInputLink"
        app:layout_constraintTop_toBottomOf="@+id/textInputLink">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/submit"
            android:textColor="@android:color/primary_text_dark_nodisable"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>